--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,6 @@
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>faces/registrocliente.xhtml</welcome-file>
+        <welcome-file>faces/registroCliente.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
